# NEXUS-AIKALABS

./: .env.example  .gitignore  README.md  docker-compose.yml  setup.sh
config/postgres/init/: 00-init-databases.sql
config/redis/: redis.conf
config/traefik/: traefik.yml
config/traefik/dynamic/: routes.yml
services/agno/: Dockerfile  nexus_legacy.py  pyproject.toml
services/agno/app/: config.py  main.py
services/agno/skills/whabi/references/: lead-scoring.md
services/agno/tools/: prefect_trigger.py  sandbox.py
services/frontend/: Dockerfile  package.json
services/workers/: pyproject.toml
